--- a/doc/latex2/results.tex
+++ b/doc/latex2/results.tex
@@ -8,7 +8,7 @@ Although not all of the results from verification of the FE scheme are perfect, 
 The numerical exact solution test is a verification of the implementation of the FE scheme. 
 A successful test indicates that the scheme is correct and will solve the diffusion equation to the expected accuracy. 
 Both the error plots from section \ref{analysis:section_manufactured_solution} and the spatial convergence test are very close to perfect, further suggesting a correct implementation. 
-When the general convergence tests for the FE scheme could be better (figures \ref{analysis:convergence_tests:FE}), it is most likely due to other effects. \\
+When the general convergence tests for the FE scheme could be better (Figure \ref{analysis:convergence_tests:FE}), it is most likely due to other effects. \\
 Considering that two out of three tests are close to perfect, the FE scheme is deemed correctly implemented within the limits of the applied tests.
 
 \subsection{The BE scheme and the block tridiagonal solver}
