--- a/doc/latex2/discussion.tex
+++ b/doc/latex2/discussion.tex
@@ -1,21 +1,20 @@
 \section{Discussion}
 
 A large portion of the work that has been put into this thesis has been on code implementation. 
-Because it is really demanding to read computer code, and it does not necessarily provide extra clarity, the code is not included in this text. 
-Should it be of interest, the complete computer code is published at \url{github.com} under the following address \\
+Because it is very demanding to read computer code on paper, and it does not necessarily provide extra clarity, the code is not included in this text. 
+The complete computer code is published at \emph{github.com} under the following address \\
 
 \noindent\url{https://github.com/fepettersen/thesis} \\
 
 In summary, this project contains
 \begin{itemize}
- \item Implementation of both explicit and implicit solvers for the (anisotropic) diffusion equation using finite difference methods in one and two spatial dimensions. The implicit solver can also handle three dimensions, but the discretization is incomplete.
- \item Implementation of a direct solver for banded linear systems which rewrites the system as block tridiagonal. As far as I'm aware, this block tridiagonal solver is one order more efficient than all other direct solvers.
+ \item Implementation of both explicit and implicit solvers for the (anisotropic) diffusion equation using finite difference methods in one and two spatial dimensions. The implicit solver can also handle three dimensions, but this requires writing code that assembles the coefficient matrix.
+ \item Implementation of a direct solver for banded linear systems which rewrites the system as block tridiagonal. To my knowledge, this block tridiagonal solver is one order more efficient than any other direct solver.
  \item Implementation of a random walk model for (anisotropic) diffusion in one and two spatial dimensions, with the grounds for three dimensions laid.
  \item Combination of the PDE and RW models into a hybrid diffusion model. 
  \item Thorough testing and verification of all the implemented solvers.
  \item An application of a slightly modified version of the hybrid diffusion model on diffusion of PKC$\gamma$ from thick apical dendrites into very narrow dendritic spines.
 \end{itemize}
-
 
 \subsection{Application}
 
@@ -36,11 +35,11 @@ All that is needed to switch lower scale model is to put the new solver in the c
 As a test, the DSMC code developed by Anders Hafreager was used as a lower scale model for one simulation. 
 Naturally, a few problems arise, but from a strictly programming point of view it worked. \\
 
-As mentioned in section \ref{theory:BC_RW}, perfect flux exchange between the higher and lower scale model might have been a better boundary condition for the RW model than zero flux boundary conditions. 
+\noindent As mentioned in section \ref{theory:BC_RW}, perfect flux exchange between the higher and lower scale model might have been a better boundary condition for the RW model than zero flux boundary conditions. 
 In principle, changing boundary conditions on the RW solver is simple, seeing as it is completely separate from the rest of the software. 
-The reason the boundary conditions have not been changed is that it requires a complete workover of the coupling between the two models as well, which is a much larger job. 
+The reason the boundary conditions have not been changed is that it requires a complete workover of the coupling between the two models as well, which is a much larger job. \\
 
-Perhaps the biggest weakness of the software, as it stands, is the limitation in mesh geometry. 
+\noindent Perhaps the biggest weakness of the software, as it stands, is the limitation in mesh geometry. 
 Implementing a mesh geometry which is not square in a finite difference method turns out to be very complicated, and requires transforming the PDE to a new set of coordinates. 
 Ultimately one must solve an entirely different equation. 
 Alternatively, a finite element method can be used. 
@@ -48,10 +47,10 @@ Finite element software will already have support for new mesh geometries built 
 Implementing a finite element PDE solver will also make it a lot easier to use a higher order approximation to the time derivative, hence getting a more accurate PDE solution. 
 
 There are, of course, a lot of physical problems which the developed software can be applied to. 
-One possibility is modeling for example sodium ions that diffuse through ion channels in the cell membrane of neurons into the extracellular space of the brain. 
+One possibility is modeling sodium ions that diffuse through ion channels in the cell membrane of neurons into the extracellular space of the brain. 
 Ion channels are very narrow, often only allowing one ion through at a time, and they are (often) specific to one ion. 
 Two 1D PDEs can describe the intra-, and extra-cellular concentrations of ions, and a lower scale model can describe the ion channel. 
-This problem would also need to consider drift terms arising from Coulomb forces. \\
+This problem would also need to consider drift terms arising from Coulomb forces and using a modified particle model which can describe the dynamics inside an ion channel. \\
 
 In principle, any diffusion process a small portion of a large number of particles diffuse into narrow passages could be modeled by the developed hybrid diffusion solver.
 
